traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value Est is not a member of object plm.universe.Direction
    } else if (getDirection() == Direction.Est){
                                           ^